# Refill

./: .gitignore  LICENSE  README.md  README.zh-CN.md  RELEASING.md  build.sh  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
Sources/CodexSwitcher/: AppModel.swift  DesignSystem.swift  Models.swift  ProfileOperations.swift  ProfileStore.swift  ProviderStore.swift  Support.swift  Views.swift  main.swift
scripts/: generate_refill_icon.py
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  profiles.rs  providers.rs  settings.rs  switch.rs
src-tauri/src/models/: mod.rs  profile.rs  provider.rs  settings.rs  switch.rs  usage.rs
src-tauri/src/services/: app_state.rs  desktop_state.rs  mod.rs  profile_store.rs  provider_store.rs  proxy.rs  shell.rs  switch_service.rs  usage_service.rs
src/app/: App.tsx  styles.css
src/components/shell/: Sidebar.tsx
src/components/ui/: Button.tsx  Chip.tsx  Modal.tsx  TextField.tsx
src/features/accounts/: AccountsPage.tsx  DetailDrawer.tsx
src/features/dashboard/: Dashboard.tsx
src/features/profiles/: ProfileCard.tsx
src/features/providers/: ProviderDialog.tsx
src/features/settings/: DetailPanel.tsx  SettingsPage.tsx
src/features/usage/: AccountUsageDialog.tsx  UsageBadge.tsx  UsageDialog.tsx  UsagePage.tsx
src/lib/: apps.ts  format.ts  tauri.ts  types.ts  useRefill.ts
