[package]
name = "refill"
version = "3.0.5"
description = "Codex account and API provider switcher"
authors = ["Refill"]
edition = "2021"

[lib]
name = "refill_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["time"] }
walkdir = "2"
