[package]
name = "refill"
version = "4.0.0"
description = "Codex account and API provider switcher"
authors = ["Refill"]
edition = "2021"

[lib]
name = "refill_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["time", "net"] }
walkdir = "2"
